[OCR] Configure Tesseract and Cloud Vision API
